add html content to the header section

--- a/app/templates/_nav.html
+++ b/app/templates/_nav.html
@@ -1,1 +1,17 @@
-this is nav bar
+<nav>
+    <div class="logo">
+        <h1>Websitelogo</h1>
+    </div>
+
+    <div class="navbar">
+        <ul>
+            <li>Home</li>
+            <li>Blog</li>
+            <li>News</li>
+            <li>Shop</li>
+            <li>Contact</li>
+            <li>About</li>
+        </ul>
+    </div>
+
+</nav>
