--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1 id="h">Welcome to one page website!</h1>
+
+<header>
+    {% include '_nav.html' %}
+
+    <div class="main_content">
+        <div class="content">
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Soluta corrupti, tempora aliquid harum atque esse. Modi ipsam, accusantium maxime, 
+                temporibus labore consectetur asperiores veniam dolorem minus aspernatur debitis perspiciatis. Illum.
+            </p>
+            <button> <a href="#"> Shop </a> </button>
+        </div>
+
+        <div class="content_img">
+            <img src="{{ url_for('static', filename='images/businessman1.png') }}" alt="">
+        </div>
+    </div>
+</header>
+
+
+
+
+
 {% endblock %}
