--- a/app/templates/_nav.html
+++ b/app/templates/_nav.html
@@ -1,16 +1,21 @@
 <nav>
+
     <div class="logo">
-        <h1>Websitelogo</h1>
+        <h1><a href="#">Websitelogo</a></h1>
     </div>
 
     <div class="navbar">
+
+        <input type="checkbox" id="check">
+        <label for="check" class="checkBtn"><i class="fas fa-bars"></i></label>
+
         <ul>
-            <li>Home</li>
-            <li>Blog</li>
-            <li>News</li>
-            <li>Shop</li>
-            <li>Contact</li>
-            <li>About</li>
+            <li><a href="#"> Home </a></li>
+            <li><a href="#"> Blog </a></li>
+            <li><a href="#"> News </a></li>
+            <li><a href="#"> Shop </a></li>
+            <li><a href="#"> Contact </a></li>
+            <li><a href="#"> About </a></li>
         </ul>
     </div>
 
