--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,17 +7,17 @@
 
     <div class="main_content">
         <div class="content">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+            <h1>Lorem ipsum consectetur dolor adipisicing elit.</h1>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Lorem, ipsum consectetur dolor sit adipisicing elit. 
                 Soluta corrupti, tempora aliquid harum atque esse. Modi ipsam, accusantium maxime, 
                 temporibus labore consectetur asperiores veniam dolorem minus aspernatur debitis perspiciatis. Illum.
             </p>
-            <button> <a href="#"> Shop </a> </button>
+            <button> <a href="#"> Shop Now</a> </button>
         </div>
 
         <div class="content_img">
-            <img src="{{ url_for('static', filename='images/businessman1.png') }}" alt="">
+            <img src="{{ url_for('static', filename='images/businessman2.png') }}" alt="">
         </div>
     </div>
 </header>
