--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,5 +21,7 @@
 
     {% block content %}
     {% endblock %}
+
+    <script src="{{ url_for('static', filename='scripts/main.js') }}"></script>
 </body>
 </html>
