--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -123,6 +123,7 @@ nav #check{
 .content h1{
     font-size: 2.4rem;
     margin-bottom: 30px;
+    color: #FFFFFF;
 }
 
 
@@ -161,11 +162,76 @@ nav #check{
     height: 87vh;
 }
 
+
 .content_img img{
     width: 100%;
     height: 87vh;
     margin-top: 1px;
 }
+
+
+.subscribeBar{
+    width: 100%;
+    height: 100px;
+    color: #ecf0f1;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #9bc634;
+}
+
+
+.subscribeBar .subscribeContent{
+    margin-left: 100px;
+}
+
+
+.subscribeContent i{
+    position: absolute;
+    font-size: 3rem;
+    left: 40px;
+}
+
+
+.subscribeContent h2{
+    text-transform: uppercase;
+}
+
+
+.subscribeBar .subscribeForm{
+    margin-right: 70px;
+}
+
+
+.subscribeForm input[type="email"]{
+    width: 300px;
+    height: 40px;
+    border: none;
+    outline: none;
+    /* font-size: 1rem; */
+    font-family: inherit;
+    padding-left: 7px;
+}
+
+.subscribeForm button{
+    width: 140px;
+    height: 40px;
+    color: #FFFFFF;
+    cursor: pointer;
+    outline: none;
+    font-weight: bold;
+    font-family: inherit;
+    text-transform: uppercase;
+    border: 1px solid #ecf0f1;
+    background-color: #9bc634;
+    text-shadow: 2px 2px 2px gray;
+}
+
+
+
 
 
 
@@ -200,6 +266,30 @@ nav #check{
     nav .navbar ul li{
         margin-right: 1.5rem;
         font-size: 0.8rem;
+    }
+
+    .content p{
+        text-align: justify;
+        font-size: 1.1rem;
+        line-height: 24px;
+        margin-bottom: 20px;
+    }
+
+    .subscribeBar .subscribeForm{
+        margin-right: 10px;
+    }
+
+    .subscribeForm input[type="email"]{
+        width: 200px;
+    }
+
+    .subscribeContent h2{
+        font-size: 0.9rem;
+    }
+
+    .subscribeContent i{
+        font-size: 2.8rem;
+        
     }
 }
 
@@ -242,6 +332,33 @@ nav #check{
     .main_content .content_img{
         display: none;
     }
+
+    .subscribeBar{
+        height: 180px;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .subscribeBar .subscribeContent{
+        margin-bottom: 20px;
+        margin-left: 20px;
+    }
+
+    .subscribeForm input[type="email"]{
+        width: 250px;
+    }
+
+    .subscribeContent h2{
+        font-size: 2rem;
+    }
+
+    .subscribeContent i{
+        display: none;
+        
+    }
+
+    
 }
 
 
@@ -307,5 +424,9 @@ nav #check{
 
     .content_img img{
         display: none;
+    }
+
+    .subscribeContent i{
+        display: none; 
     }
 }
