--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,6 +22,21 @@
     </div>
 </header>
 
+<div class="subscribeBar">
+    
+    <div class="subscribeContent">
+        <i class="fas fa-envelope"></i>
+        <h2>Get Battel-Tested Tips</h2>
+        <p>See how new products can work for you</p>
+    </div>
+
+    <div class="subscribeForm">
+        <form action="">
+            <input type="email" name="email" placeholder="Enter your email" required> <button type="submit">Subscribe Me</button>
+        </form>
+    </div>
+</div>
+
 
 
 
