--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -140,6 +140,7 @@ nav #check{
     height: 45px;
     color: #FFFFFF;
     border: none;
+    outline: none;
     font-family: inherit;
     font-weight: bold;
     letter-spacing: 2px;
@@ -147,6 +148,10 @@ nav #check{
     box-shadow: 2px 2px 2px #0557AD;
     text-transform: uppercase;
     background-color: #9bc634;
+}
+
+.content button:hover{
+    background-color: #020887;
 }
 
 
@@ -230,6 +235,9 @@ nav #check{
     text-shadow: 2px 2px 2px gray;
 }
 
+.subscribeForm button:hover{
+    color: #9bc634;
+}
 
 
 
@@ -243,7 +251,10 @@ nav #check{
 
 
 
-@media (max-width: 1100px) {
+
+
+
+@media screen and (max-width: 1100px) {
     nav .logo{
         margin-left: 20px;
         font-size: 1rem;
@@ -257,7 +268,7 @@ nav #check{
 
 
 
-@media (max-width: 992px) {
+@media screen and (max-width: 992px) {
     nav .logo{
         margin-left: 10px;
         font-size: 0.8rem;
@@ -295,7 +306,7 @@ nav #check{
 
 
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     nav .logo{
         margin-left: 10px;
         font-size: 0.8rem;
@@ -333,30 +344,46 @@ nav #check{
         display: none;
     }
 
+    
     .subscribeBar{
-        height: 180px;
+        height: 200px;
         justify-content: center;
         flex-direction: column;
         align-items: center;
     }
 
+
     .subscribeBar .subscribeContent{
-        margin-bottom: 20px;
-        margin-left: 20px;
+        margin-left: 0px;
+        margin-bottom: 10px;
     }
 
-    .subscribeForm input[type="email"]{
-        width: 250px;
+
+    .subscribeContent{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
     }
+
+
+    .subscribeContent i{
+        position: relative;
+        margin-left: -80px;
+        font-size: 4rem;
+    }
+
 
     .subscribeContent h2{
         font-size: 2rem;
     }
 
-    .subscribeContent i{
-        display: none;
-        
+
+    .subscribeForm input[type="email"]{
+        width: 250px;
     }
+
+
 
     
 }
@@ -426,7 +453,5 @@ nav #check{
         display: none;
     }
 
-    .subscribeContent i{
-        display: none; 
-    }
+    
 }
