design a responsive card

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,54 @@
     </div>
 </div>
 
+<div class="cardsContainer">
+    
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
 
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    
+</div>
 
 
 
