--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -240,6 +240,80 @@ nav #check{
 }
 
 
+.cardsContainer{
+    width: 90%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    overflow: hidden;
+    margin: 0px auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #FFFFFF;
+}
+
+
+.cardsContainer .card{
+    width: 30%;
+    height: 93vh;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    overflow: hidden;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 5px;
+    margin-left: 5px;
+    background-color: #ecf0f1;
+    /* -webkit-box-shadow: 0px 2px 13px 3px rgba(40,40,28,0.38); 
+    box-shadow: 0px 2px 13px 3px rgba(40,40,28,0.38); */
+}
+
+.card img{
+    width: 100%;
+    height: 40vh;
+    transition: all .5s;
+}
+
+
+.card img:hover{
+    /* width: 102%;
+    height: 42vh; */
+    transform: scale(1.3,1);
+}
+
+.card h2{
+    text-transform: capitalize;
+}
+
+.card p{
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
+
+.card a button{
+    width: 100%;
+    height: 8vh;
+    color: #FFFFFF;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-family: inherit;
+    font-weight: bold;
+    background-color: #9bc634;
+    text-shadow: 2px 2px 2px gray;
+    top: 80px;
+    transition: all .5s;
+}
+
+.card a button:hover{
+    color: #9bc634;
+}
+
 
 
 
@@ -299,9 +373,13 @@ nav #check{
     }
 
     .subscribeContent i{
-        font-size: 2.8rem;
-        
+        font-size: 2.8rem; 
     }
+
+    .cardsContainer .card{
+        width: 100%;
+    }
+
 }
 
 
@@ -452,6 +530,8 @@ nav #check{
     .content_img img{
         display: none;
     }
+
+    
 
     
 }
