--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -296,18 +296,24 @@ nav #check{
 
 .card a button{
     width: 100%;
-    height: 8vh;
+    height: 3vh;
     color: #FFFFFF;
     border: none;
     outline: none;
     cursor: pointer;
+    background-color: #9bc634;
+    transition: all .5s;
+}
+
+
+.card a button:hover{
+    width: 100%;
+    height: 8vh;
+    color: #FFFFFF;
     text-transform: uppercase;
     font-family: inherit;
     font-weight: bold;
-    background-color: #9bc634;
     text-shadow: 2px 2px 2px gray;
-    top: 80px;
-    transition: all .5s;
 }
 
 .card a button:hover{
