--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -418,6 +418,63 @@ footer{
 }
 
 
+.blog_header_content{
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.blog_header_content h1{
+    color: #FFFFFF;
+    width: 60%;
+    font-size: 4rem;
+    line-height: 80px;
+    text-align: center;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+}
+
+.blog_header_content .Subscribe_form{
+    margin-bottom: 30px;
+    
+}
+
+
+.Subscribe_form input[type="email"]{
+    width: 450px;
+    height: 60px;
+    border: none;
+    outline: none;
+    font-size: 1.2rem;
+    padding-left: 10px;
+}
+
+
+.Subscribe_form button{
+    color: #FFFFFF;
+    width: 200px;
+    height: 60px;
+    border: none;
+    outline: none;
+    font-size: 1.2rem;
+    cursor: pointer;
+    font-weight: bold;
+    font-family: inherit;
+    text-transform: uppercase;
+    background-color: #9bc634;
+    text-shadow: 2px 2px 2px gray;
+}
+
+
+.Subscribe_form button:hover{
+    color: #9bc634;
+}
+
+
 
 
 
@@ -441,6 +498,18 @@ footer{
         margin-right: 1.2rem;
         font-size: 1rem;
     }
+
+
+    .blog_header_content h1{
+        font-size: 3.5rem;
+    }
+
+
+    .Subscribe_form input[type="email"]{
+        width: 400px;
+    }
+
+    
 }
 
 
@@ -517,6 +586,34 @@ footer{
         text-align: center;
     }
 
+
+
+    .blog_header_content h1{
+        width: 100%;
+        font-size: 3rem;
+    }
+
+    .blog_header_content .Subscribe_form{
+        width: 100%;
+    }
+
+
+    .Subscribe_form form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    .Subscribe_form input[type="email"]{
+        width: 90%;
+    }
+
+
+    .Subscribe_form button{
+        width: 90%;
+        margin-top: 20px;
+    }
 
     
 
@@ -613,6 +710,13 @@ footer{
     }
 
 
+    .blog_header_content h1{
+        font-size: 2.8rem;
+        padding-left: 4px;
+        padding-right: 4px;
+    }
+
+
     
 }
 
@@ -679,6 +783,13 @@ footer{
 
     .content_img img{
         display: none;
+    }
+
+
+    .blog_header_content h1{
+        font-size: 2.3rem;
+        padding-left: 2px;
+        padding-right: 2px;
     }
 
     
