--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -17,5 +17,105 @@
 </header>
 
 
+<div class="cardsContainer">
+    
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 Steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+
+    <div class="card">
+        <img src=" {{ url_for('static', filename='images/boxing3.jpg')}} " alt="">
+        <h2>7 steps to Overcome Your FEAR of CONFLICT & Get COMFY w/ CONFRONTATION</h2>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
+            eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
+        </p>
+        <a href="#"><button> Read More </button></a>
+    </div>
+  
+</div>
+
+<div class="next_previous">
+    <a href="">next</a>
+    <a href="">previous</a>
+</div>
+
+{% include '_footer.html' %}
+
+
 
 {% endblock %}
