--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -309,16 +309,14 @@ nav #check{
 .card a button:hover{
     width: 100%;
     height: 8vh;
-    color: #FFFFFF;
+    color: #9bc634;
     text-transform: uppercase;
     font-family: inherit;
     font-weight: bold;
     text-shadow: 2px 2px 2px gray;
 }
 
-.card a button:hover{
-    color: #9bc634;
-}
+
 
 
 footer{
@@ -505,7 +503,104 @@ footer{
 }
 
 
+.shop_content{
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
 
+
+.shop_content h1{
+    width: 40%;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 3rem;
+    letter-spacing: 3px;
+    margin-bottom: 40px;
+}
+
+
+
+.shop_content p{
+    width: 40%;
+    color: #ecf0f1;
+    text-align: center;
+    font-size: 1.5rem;
+    line-height: 35px;
+}
+
+
+.shoping_card_content{
+    width: 90%;
+    height: auto;
+    margin: 0px auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+
+.shoping_card_content .shoping_card{
+    width: 20%;
+    height: 60vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+    margin-top: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 10px;
+    background-color: #ecf0f1;
+}
+
+
+.shoping_card img{
+    width: 100%;
+    height: 40vh;
+    transition: all .5s;
+}
+
+
+.shoping_card img:hover{
+    transform: scale(1.3,1);
+}
+
+
+.shoping_card h2{
+    font-size: 15px;
+    text-transform: capitalize;
+}
+
+
+.shoping_card a{
+    width: 100%;
+}
+
+
+.shoping_card a button{
+    width: 100%;
+    height: 30px;
+    color: #FFFFFF;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-weight: bold;
+    font-family: inherit;
+    text-shadow: 2px 2px 2px gray;
+    background-color: #9bc634;
+}
+
+.shoping_card a button:hover{
+    color: #9bc634;
+}
 
 
 
@@ -537,6 +632,19 @@ footer{
 
     .Subscribe_form input[type="email"]{
         width: 400px;
+    }
+
+    .shop_content h1{
+        width: 60%;
+    }
+
+
+    .shop_content p{
+        width: 60%;
+    }
+
+    .shoping_card_content .shoping_card{
+        width: 30%;
     }
 
     
@@ -644,6 +752,11 @@ footer{
         width: 90%;
         margin-top: 20px;
     }
+    
+
+    .shoping_card h2{
+        font-size: 12px;
+    }
 
     
 
@@ -744,6 +857,26 @@ footer{
         font-size: 2.8rem;
         padding-left: 4px;
         padding-right: 4px;
+    }
+
+
+    .shop_content{
+        margin-top: 40px;
+    }
+
+
+    .shop_content h1{
+        width: 100%;
+    }
+
+
+    .shop_content p{
+        width: 100%;
+    }
+
+
+    .shoping_card_content .shoping_card{
+        width: 40%;
     }
 
 
