--- a/app/templates/_nav.html
+++ b/app/templates/_nav.html
@@ -10,9 +10,9 @@
         <label for="check" class="checkBtn"><i class="fas fa-bars"></i></label>
 
         <ul>
-            <li><a href="{{ url_for('index') }}" id="a" class="addActive"> Home </a></li>
-            <li><a href="{{ url_for('blog') }}" class="addActive"> Blog </a></li>
-            <li><a href="#" class="addActive"> Shop </a></li>
+            <li><a href=" {{ url_for('index') }} " id="a" class="addActive"> Home </a></li>
+            <li><a href=" {{ url_for('blog') }} " class="addActive"> Blog </a></li>
+            <li><a href=" {{ url_for('shop')}} " class="addActive"> Shop </a></li>
             <li><a href="#" class="addActive"> Contact </a></li>
             <li><a href="#" class="addActive"> About </a></li>
         </ul>
