--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -603,6 +603,99 @@ footer{
 }
 
 
+.contact_page{
+    width: 100%;
+    height: 87vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.contact_page .contact_form{
+    width: 40%;
+    height: 78vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.contact_form h1{
+    color: #FFFFFF;
+    margin-top: 30px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+
+
+.contact_form form{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
+
+.contact_form input{
+    color: #ecf0f1;
+    height: 10vh;
+    border: none;
+    outline: none;
+    font-size: 1.2rem;
+    padding-left: 10px;
+    background: none;
+    border-bottom: 1px solid #34495e;
+}
+
+
+.contact_form input::placeholder{
+    color: #ecf0f1;
+}
+
+
+.contact_form textarea{
+    color: #ecf0f1;
+    height: 20vh;
+    border: none;
+    outline: none;
+    resize: vertical;
+    font-size: 1.2rem;
+    padding-left: 10px;
+    margin-top: 10px;
+    background: none;
+    border-bottom: 1px solid #34495e;
+}
+
+
+.contact_form button{
+    color: #FFFFFF;
+    height: 8vh;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 20px;
+    font-weight: bold;
+    font-family: inherit;
+    letter-spacing: 3px;
+    margin-top: 10px;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 2px gray;
+    background-color: #9bc634;
+}
+
+
+.contact_form button:hover{
+    background-color: #020887;
+}
+
+
+.contact_page img{
+    width: 50%;
+}
+
+
+
+
 
 
 
@@ -877,6 +970,16 @@ footer{
 
     .shoping_card_content .shoping_card{
         width: 40%;
+    }
+
+
+    .contact_page img{
+        display: none;
+    }
+
+
+    .contact_page .contact_form{
+        width: 100%;
     }
 
 
