Design a responsive about page

--- a/app/templates/_nav.html
+++ b/app/templates/_nav.html
@@ -14,7 +14,7 @@
             <li><a href=" {{ url_for('blog') }} " class="addActive"> Blog </a></li>
             <li><a href=" {{ url_for('shop')}} " class="addActive"> Shop </a></li>
             <li><a href=" {{ url_for('contact')}} " class="addActive"> Contact </a></li>
-            <li><a href="#" class="addActive"> About </a></li>
+            <li><a href=" {{ url_for('about') }} " class="addActive"> About </a></li>
         </ul>
     </div>
 
