--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -694,6 +694,47 @@ footer{
 }
 
 
+.about_page{
+    width: 100%;
+    height: 87vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+
+.about_page .about_content{
+    width: 40%;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
+.about_content h1{
+    color: #FFFFFF;
+    letter-spacing: 3px;
+    font-size: 3rem;
+}
+
+
+.about_content p{
+    color: #ecf0f1;
+    font-size: 1rem;
+    line-height: 30px;
+    margin-top: 30px;
+}
+
+
+.about_page img{
+    width: 50%;
+    height: 80vh;
+}
+
+
 
 
 
@@ -980,6 +1021,16 @@ footer{
 
     .contact_page .contact_form{
         width: 100%;
+    }
+
+
+    .about_page .about_content{
+        width: 100%;
+    }
+
+
+    .about_page img{
+        display: none;
     }
 
 
