--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,7 +52,7 @@
             Sed facilis pariatur, iusto soluta magnam optio suscipit fugit, 
             eos praesentium deleniti in aut minus veniam doloribus, nesciunt quis maxime quas ullam!
         </p>
-        <a href="#"><button> Read More </button></a>
+        <a href=" {{ url_for('post_view')}} "><button> Read More </button></a>
     </div>
 
     <div class="card">
