design cards in owner template

--- a/app/templates/owner/owner_index.html
+++ b/app/templates/owner/owner_index.html
@@ -21,7 +21,34 @@
         </div>
     </div>
 
-    <div class="main_content">
+    <div class="home_right_container">
+
+        <div class="home_card">
+            <div class="card">
+                <div class="card_content">
+                    <h1>100</h1>
+                    <p>Posts</p>
+                </div>
+                <span class="fas fa-store-alt"></span>
+            </div>
+
+            <div class="card">
+                <div class="card_content">
+                    <h1>120</h1>
+                    <p>Products</p>
+                </div>
+                <span class="fas fa-store-alt"></span>
+            </div>
+
+            <div class="card">
+                <div class="card_content">
+                    <h1>170</h1>
+                    <p>Subscriber</p>
+                </div>
+                <span class="fas fa-users"></span>
+            </div>
+
+        </div>
 
     </div>
 </div>
