--- a/app/static/style/owner.css
+++ b/app/static/style/owner.css
@@ -88,3 +88,55 @@
 .dashbord_navbar li a.active{
     color: #9bc634;
 }
+
+
+.home_right_container{
+    width: 75%;
+    height: 100vh;
+    background-color: #bdc3c7;
+}
+
+
+.home_card{
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid black;
+}
+
+
+.home_card .card{
+    width: 30%;
+    height: 20vh;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #fff;
+}
+
+
+.card .card_content h1{
+    font-size: 3rem;
+    font-weight: bolder;
+}
+
+
+.card .card_content p{
+    padding-left: 4px;
+}
+
+
+.card span{
+    color: #9bc634;
+    font-size: 2rem;
+}
+
+
+
+
+
+
+
