--- a/app/templates/owner/owner_index.html
+++ b/app/templates/owner/owner_index.html
@@ -11,7 +11,7 @@
 
         <div class="dashbord_navbar">
             <ul>
-                <li><span class="fas fa-home"></span> <a href="#" class="addActive">Home</a></li>
+                <li><span class="fas fa-home"></span> <a href=" {{ url_for('dashboard')}} " class="addActive">Home</a></li>
                 <li><span class="fas fa-store-alt"></span> <a href="#" class="addActive">Post</a></li>
                 <li><span class="fas fa-store-alt"></span> <a href="#" class="addActive">Product</a></li>
                 <li><span class="fas fa-users"></span> <a href="#" class="addActive">Subscribe</a></li>
@@ -21,7 +21,11 @@
         </div>
     </div>
 
+
+
     <div class="home_right_container">
+
+        <!-- starting of card -->
 
         <div class="home_card">
             <div class="card">
@@ -50,7 +54,65 @@
 
         </div>
 
+        <!-- Ending of card -->
+
+        <!-- stating of post and subscribe container -->
+
+        <div class="post_and_subscribe_container">
+            <div class="post">
+                <h2>Latest Post</h2>
+                <div class="post_content">
+                    <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                    <a href="#"><span class="fas fa-edit"></span></a>
+                    <a href="#"><span class="fas fa-trash"></span></a>
+                </div>
+
+                <div class="post_content">
+                    <label><a href="#">Lorem ipsum dolor sit am</a></label>
+                    <a href="#"><span class="fas fa-edit"></span></a>
+                    <a href="#"><span class="fas fa-trash"></span></a>
+                </div>
+
+                <div class="post_content">
+                    <label><a href="#">Lorem ipsum dolor sit am</a></label>
+                    <a href="#"><span class="fas fa-edit"></span></a>
+                    <a href="#"><span class="fas fa-trash"></span></a>
+                </div>
+
+                <div class="post_content">
+                    <label><a href="#">Lorem ipsum dolor sit am</a></label>
+                    <a href="#"><span class="fas fa-edit"></span></a>
+                    <a href="#"><span class="fas fa-trash"></span></a>
+                </div>
+
+                <div class="post_content">
+                    <label><a href="#">Lorem ipsum dolor sit am</a></label>
+                    <a href="#"><span class="fas fa-edit"></span></a>
+                    <a href="#"><span class="fas fa-trash"></span></a>
+                </div>
+            </div>
+
+            <div class="subscribe">
+                <h2>Latest Subscriber</h2>
+                <div class="subscribe_content">
+                    <label>Example@gmail.com</label>
+                    <label>Example111@gmail.com</label>
+                    <label>Example@gmail.com</label>
+                    <label>Example@gmail.com</label>
+                    <label>Example11@gmail.com</label>
+                    <label>Example22@gmail.com</label>
+                    <label>Example@gmail.com</label>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- ending of post and subscribe container -->
+
     </div>
+
+
+
 </div>
 
 {% endblock %}
