--- a/app/templates/owner/owner_post.html
+++ b/app/templates/owner/owner_post.html
@@ -10,6 +10,72 @@
     
     <div class="right_container">
         {% include 'owner/_searchbar.html' %}
+
+
+        <div class="post_in_postpage">
+
+            <h2>Latest Post</h2>
+            <div class="postpage_content">
+                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <a href="#"><span class="fas fa-edit"></span></a>
+                <a href="#"><span class="fas fa-trash"></span></a>
+                <a href="#"><span class="fas fa-arrow-right"></span></a>
+            </div>
+
+
+            <div class="postpage_content">
+                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <a href="#"><span class="fas fa-edit"></span></a>
+                <a href="#"><span class="fas fa-trash"></span></a>
+                <a href="#"><span class="fas fa-arrow-right"></span></a>
+            </div>
+
+            <div class="postpage_content">
+                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <a href="#"><span class="fas fa-edit"></span></a>
+                <a href="#"><span class="fas fa-trash"></span></a>
+                <a href="#"><span class="fas fa-arrow-right"></span></a>
+            </div>
+
+            <div class="postpage_content">
+                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <a href="#"><span class="fas fa-edit"></span></a>
+                <a href="#"><span class="fas fa-trash"></span></a>
+                <a href="#"><span class="fas fa-arrow-right"></span></a>
+            </div>
+
+            <div class="postpage_content">
+                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <a href="#"><span class="fas fa-edit"></span></a>
+                <a href="#"><span class="fas fa-trash"></span></a>
+                <a href="#"><span class="fas fa-arrow-right"></span></a>
+            </div>
+
+
+            <div class="postpage_content">
+                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <a href="#"><span class="fas fa-edit"></span></a>
+                <a href="#"><span class="fas fa-trash"></span></a>
+                <a href="#"><span class="fas fa-arrow-right"></span></a>
+            </div>
+
+
+            <div class="postpage_content">
+                <label><a href="#">7 Steps To Overcome Your FEAR Of CONFLICT & Get COMFY W/ CONFRONTATION</a></label>
+                <a href="#"><span class="fas fa-edit"></span></a>
+                <a href="#"><span class="fas fa-trash"></span></a>
+                <a href="#"><span class="fas fa-arrow-right"></span></a>
+            </div>
+
+
+            
+
+            <div class="next_pre_btn">
+                <a href="#">next</a>
+                <a href="#">previous</a>
+            </div>
+        </div>
+
     </div>
 </div>
 
