--- a/app/templates/owner/_sidebar.html
+++ b/app/templates/owner/_sidebar.html
@@ -7,7 +7,7 @@
         <ul>
             <li><span class="fas fa-home"></span> <a href=" {{ url_for('dashboard')}} " class="addActive">Home</a></li>
             <li><span class="fas fa-store-alt"></span> <a href=" {{ url_for('post')}} " class="addActive">Post</a></li>
-            <li><span class="fas fa-cart-arrow-down"></span> <a href="#" class="addActive">Product</a></li>
+            <li><span class="fas fa-cart-arrow-down"></span> <a href=" {{ url_for('product') }} " class="addActive">Product</a></li>
             <li><span class="fas fa-users"></span> <a href="#" class="addActive">Subscribe</a></li>
             <li><span class="fas fa-plus-circle"></span> <a href="#" class="addActive">Add Post</a></li>
             <li><span class="fas fa-plus-circle"></span> <a href="#" class="addActive">Add Product</a></li>
